--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
-    "browser-sync": "^2.11.2",
-    "http-server": "^0.6.1",
-    "karma": "~0.10",
-    "karma-junit-reporter": "^0.2.2",
-    "protractor": "~0.20.1",
-    "shelljs": "^0.2.6"
+    "browser-sync": "^2.11.2"
   },
   "scripts": {
     "postinstall": "bower install",
