--- a/package.json
+++ b/package.json
@@ -7,16 +7,11 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
-    "browser-sync": "^2.11.2",
-    "http-server": "^0.6.1",
-    "karma": "~0.10",
-    "karma-junit-reporter": "^0.2.2",
-    "protractor": "~0.20.1",
-    "shelljs": "^0.2.6"
+    "browser-sync": "^2.11.2"
   },
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "node_modules/.bin/browser-sync start --files 'app/css/*.css, app/js/**/*.js, app/*.html, app/partials/*.html' --server 'app'"
+    "start": "node_modules/.bin/browser-sync start --files 'app/css/*.css, app/js/**/*.*, app/*.html, app/partials/**/*.html' --server 'app'"
     }
 }
